# rebot-b601-102-record-demo

./: .dockerignore  .gitignore  CLAUDE.md  README.md  install_guide.md  pyproject.toml
Python_SDK/: dual_rebot_music.py  pipermate_sdk.py  rebot_music.py  rebot_pipermate.py  rebot_so102_record.py
backend/: app.py  config.py  controller.py  models.py  storage.py
deploy/: Dockerfile  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  modeStyle.ts  types.ts  useWs.ts
frontend/src/components/: ActionPicker.tsx  JointPanel.tsx  RecordingRow.tsx  StageMain.tsx  StatusBanner.tsx  StatusFoot.tsx  Toaster.tsx
