[project]
name = "rebot-record"
version = "0.2.0"
description = "rebot B601-DM master + SO102 slave teleop / record / playback service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fashionstar-uart-sdk>=1.3.8",
    "numpy>=2.0",
    "pyserial>=3.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
